--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,16 +1,17 @@
-@import "tailwindcss";
 /* import google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik:wght@300..900&display=swap");
+@import "tailwindcss";
 
 * {
+  box-sizing: border-box;
   font-family: "Outfit", sans-serif;
 }
 
 :root {
-    --color-primary: #55ff00;
-    --color-secondary: #08B6CE;
-    --color-tertiary: #0097B6;
-    --color-quaternary: #007791;
-    --color-quinary: #00576B;
-    --color-senary: #003746;
+  --color-primary: #08b6ce;
+  --color-secondary: #55ff00;
+  --color-tertiary: #0097b6;
+  --color-quaternary: #007791;
+  --color-quinary: #00576b;
+  --color-senary: #003746;
 }
