--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,16 +1,24 @@
-/* import google fonts */
+/* Import Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik:wght@300..900&display=swap");
 @import "tailwindcss";
 
-* {
+/* Box Sizing */
+*,
+*::before,
+*::after {
   box-sizing: border-box;
+}
+html,
+body {
   font-family: "Outfit", sans-serif;
 }
 
+/* Scrollbar */
 ::-webkit-scrollbar {
   display: none;
 }
 
+/* Root */
 :root {
   --color-primary: #08b6ce;
   --color-secondary: #0097b6;
@@ -18,4 +26,15 @@
   --color-quaternary: #007791;
   --color-quinary: #00576b;
   --color-senary: #003746;
+}
+
+/* Reset Tailwind */
+.reset-tw,
+.reset-tw * {
+  all: revert !important;
+}
+
+/* Clerk drawer */
+.cl-drawerRoot {
+  z-index: 9999 !important;
 }
